<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic_button"
            android:title="@string/menu_basicButton" />

        <item
            android:id="@+id/nav_icon_button"
            android:title="@string/menu_iconButton" />

        <item
            android:id="@+id/nav_checkbox"
            android:title="@string/menu_checkbox" />

        <item
            android:id="@+id/nav_radiobox"
            android:title="@string/menu_radiobox" />

        <item
            android:id="@+id/nav_progressbar"
            android:title="@string/menu_progressbar" />
    </group>
</menu>